<resources>
    <string name="app_name">PDF Viewer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="page_scroll_direction_horizontal">Horizontal</string>
    <string name="page_scroll_direction_vertical">Vertical</string>
    <string name="hud_view_mode_automatic">Automatic</string>
    <string name="hud_view_mode_automatic_border_pages">Automatic (with border pages)</string>
    <string name="hud_view_mode_visible">Always visible</string>
    <string name="hud_view_mode_hidden">Always hidden</string>
    <string-array name="hud_view_modes">
        <item>@string/hud_view_mode_automatic</item>
        <item>@string/hud_view_mode_automatic_border_pages</item>
        <item>@string/hud_view_mode_visible</item>
        <item>@string/hud_view_mode_hidden</item>
    </string-array>
    <string name="page_layout_single">Single</string>
    <string name="page_layout_double">Double</string>

    <string name="setting_activity_immersive_mode">Immersive mode</string>
    <string name="setting_actions_show_outline_action">Enable document outline</string>
    <string name="setting_actions_show_annotationlist_action">Enable annotation list</string>
    <string name="setting_show_thumbnail_grid_action">Show thumbnail grid</string>
    <string name="setting_show_thumbnail_bar">Show thumbnail bar</string>
    <string name="setting_fit_page_to_width">Fit page to width</string>
    <string name="setting_restore_last_viewed_page">Restore last viewed page</string>
    <string name="setting_inline_search">Inline search</string>
    <string name="setting_scroll_direction">Scroll direction</string>
    <string name="setting_page_layout">Page layout</string>
    <string name="setting_scroll_continuously">Scroll continuously</string>
    <string name="setting_enable_annotation_editing">Enable annotation editing</string>
    <string name="setting_enable_form_editing">Enable form editing</string>
    <string name="setting_show_share_action">Show share action</string>
    <string name="setting_show_print_action">Show print action</string>
    <string name="setting_invert_colors">Invert page colors</string>
    <string name="setting_grayscale">Grayscale</string>
    <string name="setting_enable_text_selection">Enable text selection</string>
    <string name="setting_start_page">Start page</string>
    <string name="setting_start_page_dialog">Page to start document at (make sure it fits the number of pages in document you want to open): </string>
    <string name="setting_clear_cache">Clear cache</string>
    <string name="setting_clear_app_data">Clear app data</string>
    <string name="setting_clear_app_data_summary">This will reset all stored app settings (kills the app, requires a restart).</string>

    <string name="setting_show_page_number_overlay">Show page number overlay</string>
    <string name="setting_show_page_labels">Show page labels</string>

    <string name="hud_view_mode">HUD view mode</string>
    <string name="hide_ui_when_creating_annotations">Hide UI when creating annotations</string>
    <string name="setting_first_page_single">Display first page as single</string>
    <string name="setting_show_gap_between_pages">Show gaps between pages</string>
    <string name="setting_show_search_action">Show search action</string>
    <string name="setting_category_activity">Activity</string>
    <string name="setting_category_layout">Layout</string>
    <string name="setting_double_page_mode">Double Page</string>
    <string name="setting_category_search">Search</string>
    <string name="setting_category_thumbnails_outline">Thumbnails / Outline</string>
    <string name="setting_category_annotations">Annotations</string>
    <string name="setting_category_forms">Forms</string>
    <string name="setting_category_actions">Actions</string>
    <string name="setting_category_customization">Customization</string>
    <string name="setting_category_other">Other</string>
    <string name="page_layout_auto">Auto</string>
    <string-array name="page_scroll_directions">
        <item>@string/page_scroll_direction_horizontal</item>
        <item>@string/page_scroll_direction_vertical</item>
    </string-array>
    <string-array name="page_layouts">
        <item>@string/page_layout_auto</item>
        <item>@string/page_layout_single</item>
        <item>@string/page_layout_double</item>
    </string-array>
    <string name="kioskExampleTitle">Kiosk Grid</string>
    <string name="kioskExampleDescription">Displays all documents in the assets folder.</string>
    <!--<string name="PSPDFKIT_LICENSE_KEY">tHCmVLjjZm724h1X7Qr1EnjVH9bAkl75zPeLUC9FiYimERy6_wnwclH6U_39l8j0q9nQF5tdoMXuy0Zw2_DPCm9fSwUbOhoycXO9LxpeLiqRJl_wDpH3H0vky_mSS2UtfbEZPx3rH4T2XkfEhAjRtBLKkmbsw3mefWoqayJE80l8ic9kEkVayuTPY2ZTpnQsrEo_VSLqhvzJOYbJQnglpS4fGS-0EvlSLGmkjQMSq16ixuzp9Sbp1f6PRrVgmJUjrV0vPat2hqBSwiALuR8UPvtftbkuxtGrCErhsH9Wd_my0YdaS9y2k7TZUUCkr3fmp702yWEveRhv0PmXBmpcQ7vGDSvYq8ZGMZLIgfnTxXctiyhzsgFzE5PbfmCW0lb0W_WTKb6txt5riQixgs9F-C_GGy7xF8f2SvmMXI0FlOl27KEwFe45S049gg2mAhC</string>-->
</resources>
